--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
 	<groupId>org.ops4j.pax</groupId>
 	<artifactId>web</artifactId>
-	<version>7.2.4.CODICE</version>
+	<version>7.2.5.CODICE-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>OPS4J Pax Web</name>
@@ -46,7 +46,7 @@
 		<connection>scm:git:https://github.com/codice/org.ops4j.pax.web.git</connection>
 		<developerConnection>scm:git:https://github.com/codice/org.ops4j.pax.web.git</developerConnection>
 		<url>https://github.com/codice/org.ops4j.pax.web/tree/pax-web-7.2.x</url>
-		<tag>web-7.2.4.CODICE</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<developers>
