--- a/samples/war-jsf22/pom.xml
+++ b/samples/war-jsf22/pom.xml
@@ -26,7 +26,7 @@
 	<parent>
 		<artifactId>samples</artifactId>
 		<groupId>org.ops4j.pax.web</groupId>
-		<version>7.2.4.CODICE</version>
+		<version>7.2.5.CODICE-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
